# tinyos64

./: CMakeLists.txt  README.md  run_qemu.sh
src/: CMakeLists.txt  linker.ld
src/kernel/: CMakeLists.txt  boot.asm  boot64.asm  console.c  console.h  exceptions.c  fpu.c  fpu.h  keyboard.c  keyboard.h  linker.ld  main.c  mandelbrot.c  mandelbrot.h  multiboot.asm  multiboot.c  ports.c  ports.h  print.c  print.h  smbios.c  smbios.h
